--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,7 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
   - init: echo 'init script' # runs during prebuild
-    before: docker-compose update
+    before: docker-compose up
     command: gp_start
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
