--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@
 tasks:
   - init: echo 'init script' # runs during prebuild
     before: docker-compose up
-    command: gp_start
+    command: pg_start
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
