--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,5 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
-image: gitpod/workspace-full
+image: gitpod/workspace-postgres
 tasks:
   - init: echo 'init script' # runs during prebuild
     before: docker-compose up
