--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,11 +1,6 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 image: gitpod/workspace-postgres
-tasks:
-  - init: echo 'init script' # runs during prebuild
-    before: docker-compose up
-    command: pg_start
 
-# List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
-ports:
-  - port: 3000
-    onOpen: open-preview
+tasks:
+  - init: pipenv shell && pipenv install
+    command: python
